<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:orientation="vertical">

	<!--<ImageView
		android:id="@+id/id_logo"
		android:layout_width="150dp"
		android:layout_height="150dp"
		android:contentDescription="@string/app_name"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="50dp"
		android:scaleType="centerCrop"
		android:src="@drawable/icono" />-->

	<com.airbnb.lottie.LottieAnimationView
		android:id="@+id/animationView"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		app:lottie_rawRes="@raw/lottiemeditando"
		app:lottie_autoPlay="true"
		app:lottie_loop="true"/>

      <ImageView
		  android:visibility="gone"
          android:id="@+id/id_splash_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/splash1" />
      <LinearLayout
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	     android:layout_centerHorizontal="true"
		 android:layout_alignParentTop="true"
		  android:layout_marginTop="75dp"
	    android:gravity="center"
	    android:orientation="vertical">    
		    <TextView
		         android:id="@+id/id_splash_text1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:textColor="#435d76"
		        android:text="@string/splash1"
		        android:textSize="32sp"/>
		    <TextView
		         android:id="@+id/id_splash_text2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		          android:textColor="#435d76"
		        android:text="@string/splash2"
		        android:layout_marginTop="-20dp"
		        android:textSize="40sp"/>
		    <TextView
		         android:id="@+id/id_splash_text3"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		          android:textColor="#435d76"
		        android:text="@string/splash3"
		        android:layout_marginTop="-20dp"
		        android:textSize="32sp"/>
		    <TextView
		         android:id="@+id/id_splash_text4"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		          android:textColor="#435d76"
		        android:text="@string/splash4"
		        android:layout_marginTop="-20dp"
		        android:textSize="40sp"/>
		    <TextView
		         android:id="@+id/id_splash_text5"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		          android:textColor="#435d76"
		          android:layout_marginTop="-20dp"
		        android:text="@string/splash5"
		        android:textSize="32sp"/>
	</LinearLayout>
</RelativeLayout>
