<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#ffffff"
    android:orientation="vertical" >    
	    <LinearLayout
			android:id="@+id/id_header_acercade"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:paddingLeft="@dimen/activity_horizontal_margin"
    		android:paddingRight="@dimen/activity_horizontal_margin"
		    android:orientation="horizontal">
		    
	         <LinearLayout
    	    	android:id="@+id/id_acercade_atras"	             
			    android:layout_width="57dp"
			    android:layout_height="25dp"
	    	    android:gravity="center"    	
	    	    android:layout_marginLeft="-16dp"    	    
			    android:orientation="horizontal">
		    	 <ImageView
			        android:layout_width="wrap_content"
			        android:layout_height="19dp"
			        android:src="@drawable/hamburguesa"/>
		    	 </LinearLayout>
	        <TextView
	            android:id="@+id/id_acercade_inicio"
		        android:layout_width="wrap_content"
		        android:layout_height="25dp"
		        android:gravity="center"
		        android:textSize="19sp"
		        android:textColor="#0c465e"
		        android:text="@string/acercade" />
	    
	    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
	    android:layout_height="match_parent" 
	     android:scrollbarThumbVertical="@drawable/scrollbar"
		android:layout_above="@+id/id_bottommenu"
		android:layout_below="@+id/id_header_acercade"
	    android:layout_marginBottom="10dp">
	    <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:paddingLeft="@dimen/activity_horizontal_margin"
    		android:paddingRight="@dimen/activity_horizontal_margin"
		    android:orientation="vertical">
	    <ImageView
	    	    android:id="@+id/id_acercade_logo"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:src="@drawable/logo_acercade"
		        android:layout_marginTop="25dp"
		        android:layout_marginBottom="10dp"
		        android:layout_gravity="center"
		        android:scaleType="center"/>
	     <TextView
	            android:id="@+id/id_acercade_texto1"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:textSize="16sp"
		         android:layout_marginTop="15dp"
		        android:textColor="#0c465e"
		        android:text="@string/acercade_texto1" />
	     <TextView
	            android:id="@+id/id_acercade_texto2"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:textSize="16sp"
		        android:layout_marginTop="15dp"
		        android:textColor="#0c465e"
		        android:text="@string/acercade_texto2" />
	     <TextView
	            android:id="@+id/id_acercade_texto3"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:textSize="16sp"
		        android:layout_marginTop="15dp"
		        android:textColor="#0c465e"
		        android:text="@string/acercade_texto3" />
	     <LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="match_parent"
		    android:layout_gravity="center"
		    android:orientation="horizontal">
		     <ImageView
		        android:layout_width="105dp"
		        android:layout_height="130dp"
		        android:layout_weight="0.5"
		        android:src="@drawable/enrique"
		        android:layout_marginTop="15dp"
		        android:paddingBottom="15dp"
		        android:layout_gravity="center"/>
		      <ImageView
		        android:layout_width="105dp"
		        android:layout_height="130dp"
		        android:layout_weight="0.5"
		        android:src="@drawable/guillermo"
		        android:layout_marginTop="15dp"
		        android:paddingBottom="15dp"
		        android:layout_gravity="center"/>
		 </LinearLayout>
		  <TextView
	            android:id="@+id/id_acercade_texto4"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:textSize="16sp"
		         android:layout_marginTop="15dp"
		        android:textColor="#0c465e"
		        android:text="@string/acercade_texto4" />
	     <TextView
	            android:id="@+id/id_acercade_texto5"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:textColorLink="#0c465e"
		        android:textSize="16sp"
		        android:layout_marginTop="15dp"
		        android:textColor="#0c465e"
		        android:text="@string/acercade_texto5" />
	     <TextView
	            android:id="@+id/id_acercade_nuestrolibro"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:textSize="19sp"
		        android:layout_marginTop="15dp"
		        android:textColor="#0c465e"
		        android:text="@string/acercade_nuestrolibro" />
	       <LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="match_parent"
		    android:orientation="horizontal">
		     <TextView
	            android:id="@+id/id_acercade_texto6"
		        android:layout_width="200dp"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:textSize="16sp"
		        android:layout_marginTop="15dp"
				android:layout_marginBottom="15dp"
				android:textColorLink="#0c465e"
		        android:textColor="#0c465e"
		        android:text="@string/acercade_texto6" />
		      <ImageView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:src="@drawable/libro"
		        android:layout_marginTop="15dp"
		        android:layout_gravity="center"/>
		 </LinearLayout>
		  <TextView
	            android:id="@+id/id_acercade_siguenos"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:textSize="19sp"
		        android:layout_marginTop="15dp"
		        android:textColor="#0c465e"
		        android:text="@string/acercade_siguenos" />
		   <TextView
	            android:id="@+id/id_acercade_texto7"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:textSize="19sp"
		        android:layout_marginTop="15dp"
		        android:textColor="#0c465e"
		        android:text="@string/acercade_texto7" />
		   <LinearLayout
		    android:layout_width="wrap_content"
		    android:layout_height="match_parent"
		    android:layout_gravity="center"
		    android:orientation="horizontal">
		     <ImageView
		         android:id="@+id/id_acercade_youtube"
		        android:layout_width="75dp"
		        android:layout_height="75dp"
		        android:layout_weight="0.5"
		        android:src="@drawable/btn_youtube"
		        android:layout_marginTop="15dp"
		        android:paddingBottom="15dp"
		        android:layout_gravity="center"/>
		      <ImageView
		          android:id="@+id/id_acercade_facebook"
		        android:layout_width="75dp"
		        android:layout_height="75dp"
		        android:layout_weight="0.5"
		        android:src="@drawable/btn_facebook"
		        android:layout_marginTop="15dp"
		        android:paddingBottom="15dp"
		        android:layout_gravity="center"/>
			   <ImageView
				   android:id="@+id/id_acercade_instagram"
				   android:layout_width="85dp"
				   android:layout_height="85dp"
				   android:layout_weight="0.5"
				   android:src="@drawable/btn_instagram"
				   android:layout_marginTop="15dp"
				   android:paddingBottom="15dp"
				   android:layout_gravity="center"/>
		 </LinearLayout>
		 <TextView
	            android:id="@+id/id_acercade_web"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:textSize="19sp"
		        android:layout_marginTop="15dp"
		        android:textColor="#287b9d"
		        android:text="@string/acercade_web" />
		 <TextView
	            android:id="@+id/id_acercade_mail"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:textSize="19sp"
		        android:layout_marginTop="5dp"
		        android:textColor="#287b9d"
		        android:text="@string/acercade_mail" />
		
		 <TextView
	            android:id="@+id/id_acercade_newsletter"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:textSize="19sp"
		        android:layout_marginTop="15dp"
		        android:textColor="#0c465e"
		        android:text="@string/acercade_newsletter" />
		 <TextView
	            android:id="@+id/id_acercade_texto8"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:layout_gravity="center"
		        android:textSize="19sp"
		        android:layout_marginTop="15dp"
		        android:textColor="#0c465e"
		        android:text="@string/acercade_newsletter_text" />
		 <TextView
	            android:id="@+id/id_acercade_newsletter_btn"
		        android:layout_width="match_parent"
		        android:layout_height="50dp"
		        android:layout_gravity="center"
		        android:gravity="center"
		        android:textSize="19sp"
		        android:layout_marginTop="15dp"
		        android:background="#0c465e"
		        android:textColor="#ffffff"
		        android:text="@string/acercade_newsletter_btn" />
	   </LinearLayout> 
	</ScrollView>

	<LinearLayout
		android:id="@+id/id_bottommenu"
		android:layout_width="match_parent"
		android:layout_height="60dp"
		android:visibility="gone"
		android:layout_alignParentBottom="true">
		<fragment android:name="org.simo.medita.FragmentBottomMenu"
			android:id="@+id/id_fragment_bottom_menu"
			android:layout_width="match_parent"
			android:layout_height="match_parent"/>
	</LinearLayout>
</RelativeLayout>
