<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecoveryPass"
    android:background="#FFFFFF">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/id_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="8dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="19dp"
                android:src="@drawable/atras_ico"
                android:tint="#0c465e" />

        </LinearLayout>

        <TextView
            android:id="@+id/id_acercade_inicio"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:gravity="center"
            android:text="@string/recovery_pass"
            android:textColor="#0c465e"
            android:textSize="19sp"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/text_recuperar_cuenta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="@dimen/et_tv_height"
            android:gravity="center_vertical"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:text="@string/email" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/et_tv_height"
            android:background="@drawable/bt_crear_cuenta_background"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:paddingEnd="8dp"
            android:paddingStart="8dp" />

        <Button
            android:id="@+id/bt_recuperar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/et_tv_height"
            android:layout_marginTop="16dp"
            android:background="@drawable/btn_sinc"
            android:text="@string/bt_recuperar_cuenta"
            android:textAllCaps="false"
            android:textColor="#ffffff" />

    </LinearLayout>




</android.support.constraint.ConstraintLayout>