<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#f2f2f2">
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
	
	  <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentTop="true"
	    android:layout_marginTop="16dp"
	    android:orientation="horizontal">
	    <LinearLayout
		    android:layout_width="57dp"
		    android:layout_height="25dp"
    	    android:id="@+id/id_sinc2_atras"	
    	    android:gravity="center"    	    	    
		    android:orientation="horizontal">
	    	 <ImageView
	    	     android:id="@+id/id_fav_back_img"
		        android:layout_width="wrap_content"
		        android:layout_height="19dp"
		        android:src="@drawable/hamburguesa"/>
    	 </LinearLayout>
        <TextView
            android:id="@+id/id_main_inicio"
	        android:layout_width="wrap_content"
	        android:layout_height="25dp"
	        android:gravity="center"
	        android:textSize="19sp"
	        android:textColor="#0c465e"
	        android:text="SINCRONIZAR |" />
        <TextView
            android:id="@+id/id_main_inicio_dos"
	        android:layout_width="wrap_content"
	        android:layout_height="25dp"
	        android:gravity="center"
	        android:textSize="17sp"
	        android:textColor="#527396"
	        android:text=" Transferir" />
    
    </LinearLayout>
   
     <TextView
            android:id="@+id/id_sinc2_tv1"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="25dp"
	        android:gravity="center"
	        android:textColor="#0c465e"
	        android:text= "@string/sinc2_text1" />
     <TextView 
    	    android:id="@+id/id_enviar_btn"
		    android:layout_width="170dp"
		    android:layout_height="50dp"
		    android:layout_gravity="center"
		    android:gravity="center"
		    android:textSize="16sp"
		    android:text="ENVIAR"
		    android:textColor="#ffffff"
		    android:background="@drawable/btn_sinc" />  
     <View  android:layout_width="match_parent"
	        android:layout_height="1px"
	        android:layout_marginTop="25dp"
	         android:background="#d8d8d8"/>
     <TextView
            android:id="@+id/id_sinc2_tv2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_margin="25dp"
	        android:gravity="center"
	        android:textColor="#0c465e"
	        android:text="@string/sinc2_text2" />
      <TextView 
    	    android:id="@+id/id_recibir_btn"
		    android:layout_width="170dp"
		    android:layout_height="50dp"
		    android:layout_gravity="center"
		    android:gravity="center"
		    android:textSize="16sp"
		    android:text="RECUPERAR"
		    android:textColor="#ffffff"
		    android:background="@drawable/btn_sinc" />  
      <View  android:layout_width="match_parent"
	        android:layout_height="1px"
	         android:layout_marginTop="25dp"
	        android:background="#d8d8d8"/>
</LinearLayout>
<TextView 
        android:id="@+id/id_sinc2_tv3"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_margin="25dp"
       android:gravity = "center"
       android:layout_alignParentBottom="true"
       android:layout_centerHorizontal="true"
       android:textColor="#0c465e"
       android:text="@string/sinc2_text3" />
	    
</RelativeLayout>